--- a/profil.html
+++ b/profil.html
@@ -23,7 +23,8 @@
         <div class="heading" id="home" style="font-size:50px; color:#146480;"><b>PROFIL</b></div>
         <p style="font-size:25px; color:#000080;"><b>Gambar</b></p>
         <div class="image">
-            <img src="images/IMG_20200105_121417.jpg" width="150" style="border: 2px solid black; border-radius: 50%;">
+            <!-- <img src="images/IMG_20200105_121417.jpg" width="150" style="border: 2px solid black; border-radius: 50%;"> -->
+            <img src="images/profile.jpg" width="150" style="border: 2px solid black; border-radius: 50%;">
             <img src="images/Gambar Profil.jpg" width="150" style="border: 2px solid black; border-radius: 50%;">
         </div>
         <p class="heading" style="font-size:25px; color:#000080;"><b>Biodata</b></p>
