--- a/blog.html
+++ b/blog.html
@@ -64,26 +64,33 @@
             In June 2018, my family and I went on vacation to <b>East Java</b>.
             <br>
             </p>
-            <div class="image">
-                <div class="gallery" style="width:300px;">
-                    <img id="myImg" src="images/IMG_6228.JPG">
-                    <div class="desc" id="image-desc">Gambar 1: Pegunungan</div>
-                    <!-- The Modal -->
-                    <div id="myModalImage" class="modal-image">
-                        <span class="close">&times;</span>
-                        <img class="modal-image-content" id="img01">
-                        <div id="caption"></div>
-                    </div>
+            <!-- <div class="image"> -->
+            <div class="gallery" style="width:300px;">
+                <img class="image" id="img01" src="images/IMG_6228.JPG">
+                <!-- <div class="desc" id="image-desc">Gambar 1: Pegunungan</div> -->
+                <div class="desc" id="img01d">Gambar 1: Pegunungan</div>
+                <!-- The Modal -->
+                <div id="myModalImage" class="modal-image">
+                    <span class="close">&times;</span>
+                    <img class="modal-image-content" id="img01m">
+                    <!-- <div id="caption"></div> -->
+                    <div id="img01c"></div>
                 </div>
-                <div class="gallery" style="width:300px;">
-                    <img src="images/IMG_6168.JPG" width="300">
-                    <div class="desc">Gambar 2: Matahari terbit / Sunrise</div>
-                </div>
-                <div class="clearfix"></div>
-                <!-- <details>
-                    <summary>Klik disini</summary>
-                </details> -->
             </div>
+            <div class="gallery" style="width:300px;">
+                <img class="image" id="img02" src="images/IMG_6168.JPG" width="300">
+                <div class="desc" id="img02d">Gambar 2: Matahari terbit / Sunrise</div>
+                <div id="myModalImage" class="modal-image">
+                    <span class="close">&times;</span>
+                    <img class="modal-image-content" id="img02m">
+                    <div id="img02c"></div>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+            <!-- <details>
+                <summary>Klik disini</summary>
+            </details> -->
+            <!-- </div> -->
             <!-- <div class="text"> <p> -->
             <span>
                 <!-- <font color="#008000">Semarang</font>, <b>Batu Malang</b>-->
