--- a/projects.html
+++ b/projects.html
@@ -44,17 +44,19 @@
         <p class="heading" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
             <p>
-            1. <a href="#1">Program Streamlit</a><br>
-            2. <a href="#2">Bangun Datar</a><br>
-            3. <a href="#3">Progress Bar</a><br>
-            4. <a href="#4">BMI Calculator</a><br>
-            5. <a href="#5">Soal Pertanyaan</a><br>
-            6. <a href="#6">Penghitung Waktu</a><br>
-            7. <a href="#7">Labirin</a><br>
-            8. <a href="#8">Kumpulan Animasi</a><br>
-			9. <a href="#9">Kalkulator Sederhana</a><br>
-			10. <a href="#10">Project dari Website Lain</a><br>
-            </p>
+            <b>Link program dalam projects:</b><br>
+            <ol>
+                <li><a href="#1">Program Streamlit</a></li>
+                <li><a href="#2">Bangun Datar</a></li>
+                <li><a href="#3">Progress Bar</a></li>
+                <li><a href="#4">BMI Calculator</a></li>
+                <li><a href="#5">Soal Pertanyaan</a></li>
+                <li><a href="#6">Penghitung Waktu</a></li>
+                <li><a href="#7">Labirin</a></li>
+                <li><a href="#8">Kumpulan Animasi</a></li>
+                <li><a href="#9">Kalkulator Sederhana</a></li>
+                <li><a href="#10">Project dari Website Lain</a></li>
+            </ol>
         </div>
 		<br><br>
 		
@@ -86,8 +88,9 @@
 			<!-- <p><a href="projects/Bangun Datar.html">Bangun Datar</a> (versi HTML)</p> -->
 			<ul>
 				<li><a href="projects/Bangun Datar.html">Bangun Datar</a> (versi HTML)</li>
-				<li>Bangun Ruang (coming soon)</li>
-				<li>Grafik (coming soon)</li>
+				<li>Bangun Ruang (Sedang dibuat)</li>
+				<li>Persamaan (Coming soon)</li>
+                <li>Grafik (Coming soon)</li>
 			</ul>
         </div><br>
         <p class="heading" id="3" style="font-size: 25px"><b>3. Progress Bar</b></p>
@@ -124,19 +127,19 @@
             <p>Kumpulan Animasi<br>Tanggal dibuat: 21 Feb 2024</p>
             <a href="projects/Kumpulan Animasi.html">Kumpulan Animasi</a>
         </div>
-        <p class="heading" id="8" style="font-size: 25px"><b>9. Kalkulator Peluang</b></p>
+        <p class="heading" id="9" style="font-size: 25px"><b>9. Kalkulator Peluang</b></p>
         <div class="container2">
             <p>Kalkulator Peluang<br>Bulan dibuat: Mei 2024</p>
-            <a href="projects/Kalkulator Peluang.html">Kalkulator Peluang (Belum ada)</a>
+            <a href="projects/Kalkulator Peluang.html">Kalkulator Peluang (Sedang dibuat)</a>
         </div>
-		<p class="heading" id="9" style="font-size: 25px"><b>10. Kalkulator Sederhana (v1.8.1)</b></p>
+		<p class="heading" id="10" style="font-size: 25px"><b>10. Kalkulator Sederhana</b></p>
         <div class="container2">
-            <p>Kalkulator Peluang<br>Bulan dibuat: Mei 2024</p>
-            <a href="projects/Kalkulator Sederhana.html">Kalkulator Sederhana (Belum lengkap)</a>
+            <p>Kalkulator Sederhana<br>Bulan dibuat: Mei 2024</p>
+            <a href="projects/Kalkulator Sederhana.html">Kalkulator Sederhana</a>
         </div>
-		<p class="heading" id="10" style="font-size: 25px"><b>11. Project dari Website Lain (v1.9)</b></p>
+		<p class="heading" id="11" style="font-size: 25px"><b>11. Project dari Website Lain (v1.9)</b></p>
         <div class="container2"><p><i>Coming Soon</i></p></div>
-        <p class="heading" id="10" style="font-size: 25px"><b>12. [Coming Soon] (v1.10)</b></p>
+        <p class="heading" id="12" style="font-size: 25px"><b>12. [Coming Soon] (v1.10)</b></p>
         <div class="container2"><p><i>Coming Soon</i></p></div>
 
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
