--- a/blog.html
+++ b/blog.html
@@ -21,6 +21,8 @@
             <a href="timeline.html">Timeline</a>
             <a href="updates.html">Updates</a>
             <a href="projects.html">Projects</a>
+            <div style="float:right;" id="search"></div>
+            <script src="search.js"></script>
             <div class="clearfix"></div>
         </div>
     </div>
@@ -64,7 +66,6 @@
             In June 2018, my family and I went on vacation to <b>East Java</b>.
             <br>
             </p>
-            <!-- <div class="image"> -->
             <div class="gallery" style="width:300px;">
                 <img class="image" id="img01" src="images/IMG_6228.JPG">
                 <!-- <div class="desc" id="image-desc">Gambar 1: Pegunungan</div> -->
@@ -80,17 +81,13 @@
             <div class="gallery" style="width:300px;">
                 <img class="image" id="img02" src="images/IMG_6168.JPG" width="300">
                 <div class="desc" id="img02d">Gambar 2: Matahari terbit / Sunrise</div>
-                <div id="myModalImage" class="modal-image">
+                <div id="myModalImage2" class="modal-image">
                     <span class="close">&times;</span>
                     <img class="modal-image-content" id="img02m">
                     <div id="img02c"></div>
                 </div>
             </div>
             <div class="clearfix"></div>
-            <!-- <details>
-                <summary>Klik disini</summary>
-            </details> -->
-            <!-- </div> -->
             <!-- <div class="text"> <p> -->
             <span>
                 <!-- <font color="#008000">Semarang</font>, <b>Batu Malang</b>-->
