--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
             <a href="timeline.html">Timeline</a>
             <a href="updates.html">Updates</a>
             <a href="projects.html">Projects</a>
-            <div style="float:right;">
-                <input type="text" class="search" style="margin:5px;" onkeyup="myFunction()" placeholder="Search...">
-                <!-- <div class="openbtn" onclick="openSearch()"><img src="images/search-icon.png" width="10"></div> -->
-            </div>
+            <!-- <div class="openbtn" onclick="openSearch()"><img src="images/search-icon.png" width="10"></div> -->
+            <div style="float:right;" id="search"></div>
+            <script src="search.js"></script>
             <div class="clearfix"></div>
         </div>
     </div>
