--- a/404.html
+++ b/404.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>File not found</title>
 </head>
 <body>
     <h1>404</h1>
-    Error 404 not found
+    Error 404 file not found<br><br>
+    Back to <a href="index.html">Main Menu</a>
 </body>
 </html>
