--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
 <body>
     <h1>404</h1>
     Error 404 file not found<br><br>
-    Back to <a href="index.html">Main Menu</a>
+    <!-- Back to <a href="index.html">Main Menu</a> -->
+    Back to <a href="https://devandaniel9.github.io">Main Menu</a>
 </body>
 </html>
